Fix overflow for pre tags

--- a/funnel/static/css/app.css
+++ b/funnel/static/css/app.css
@@ -833,6 +833,11 @@ html.touch .collapsible__body--disable {
   word-break: break-all;
 }
 
+.proposal-content pre,
+.codehilite pre {
+  white-space: pre-wrap;
+}
+
 .comment {
   margin: 1em 0;
 }
